Remove J2ME compatibility layer for keys
Use JCE instead of the DIY crypto library that is in Trilead. This was
apparently for J2ME devices. Well, I'm sorry, J2ME devices, you're dead
to me.

Conflicts:
	.classpath
	src/com/trilead/ssh2/Connection.java
	src/com/trilead/ssh2/KnownHosts.java
	src/com/trilead/ssh2/auth/AuthenticationManager.java
	src/com/trilead/ssh2/channel/ChannelManager.java
	src/com/trilead/ssh2/crypto/PEMDecoder.java
	src/com/trilead/ssh2/crypto/digest/Digest.java
	src/com/trilead/ssh2/crypto/digest/HMAC.java
	src/com/trilead/ssh2/crypto/digest/HashForSSH2Types.java
	src/com/trilead/ssh2/crypto/digest/MAC.java
	src/com/trilead/ssh2/crypto/digest/MD5.java
	src/com/trilead/ssh2/crypto/digest/SHA1.java
	src/com/trilead/ssh2/signature/DSAPrivateKey.java
	src/com/trilead/ssh2/signature/DSAPublicKey.java
	src/com/trilead/ssh2/signature/DSASHA1Verify.java
	src/com/trilead/ssh2/signature/DSASignature.java
	src/com/trilead/ssh2/signature/RSAPrivateKey.java
	src/com/trilead/ssh2/signature/RSAPublicKey.java
	src/com/trilead/ssh2/signature/RSASHA1Verify.java
	src/com/trilead/ssh2/signature/RSASignature.java
	src/com/trilead/ssh2/transport/KexManager.java